# study

./: .env  Cargo.toml  log4rs.yml
src/: main.rs
src/utils/: config.rs  mod.rs
