[package]
name = "proxy_server_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.1"
ssh2 = "0.9"
tokio-stream = "0.1"
log = "0.4"
log4rs = "1.3"
dotenv = "0.15.0"
mysql = "24.0.0"
redis = "0.26.0"
anyhow = "1.0.93"
chrono = "0.4.38"
urlencoding = "2.1.0"
base64 = "0.22.1"